--- a/TaskMaster.html
+++ b/TaskMaster.html
@@ -6,6 +6,18 @@
 	<title>The TaskMaster</title>
 </head>
 <body>
-    <h1 style="text-align: center;"></h1>
+    <div id="titleDiv" class="header">
+        <h1 style="text-align: center;">TaskMaster</h1>
+        <input type="text" id="newInput" placeholder="Add an item...">
+        <span onclick="addItem()" class="addBtn">Add!</span>
+    </div>
+    <ul id="itemUL">
+        <li>Example of how to use TaskMaster.</li>
+        <li>Type in a new item and click add to put it on the list.</li>
+        <li>Click on list items to check them off.</li>
+        <li>Click on the "x" at the end of an item to remove it.</li>
+        <li>import/export</li>
+        <li>register</li>
+    </ul>
 </body>
 </html>
