--- a/TaskMaster.html
+++ b/TaskMaster.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The TaskMaster</title>
+    <link rel="stylesheet" href="TaskMaster.css">
+    <script src="TaskMaster.js"></script>
+    <title>The TaskMaster</title>
 </head>
-<body>
+
+<body onload=xUpdate()>
     <div id="titleDiv" class="header">
-        <h1 style="text-align: center;">TaskMaster</h1>
+        <h1 style="margin:10px">TaskMaster</h1>
         <input type="text" id="newInput" placeholder="Add an item...">
-        <span onclick="addItem()" class="addBtn">Add!</span>
+        <span onclick="newItem()" class="button">Add</span><br>
+        <span onclick="importWindow()" class="button">Examples</span>
+        <span onclick="login()" class="button">Login/Register</span>
+        <span onclick="save()" class="button">Save</span>
     </div>
+
     <ul id="itemUL">
-        <li>Example of how to use TaskMaster.</li>
-        <li>Type in a new item and click add to put it on the list.</li>
-        <li>Click on list items to check them off.</li>
-        <li>Click on the "x" at the end of an item to remove it.</li>
-        <li>import/export</li>
-        <li>register</li>
+        <li>Example of how to use TaskMaster.<span class="X">X</span></li>
+        <li>Type in a new item and click add to put it on the list.<span class="X">X</span></li>
+        <li>Click on list items to check them off.<span class="X">X</span></li>
+        <li>Click on the "x" at the end of an item to remove it.<span class="X">X</span></li>
+        <li>import/export<span class="X">X</span></li>
+        <li>register<span class="X">X</span></li>
     </ul>
 </body>
 </html>
