--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="TaskMaster.css">
+    <link rel="stylesheet" href="./TaskMaster.css">
     <title>The TaskMaster!</title>
 </head>
 
