--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./TaskMaster.css">
+    <link rel="stylesheet" href="https://kskulski-taskmaster.azurewebsites.net/TaskMaster.css">
     <title>The TaskMaster!</title>
 </head>
 
@@ -27,6 +27,6 @@
         <li>register/login<span class="X">X</span></li>
     </ul>
 
-    <script src="TaskMaster.js"></script>
+    <script src="https://kskulski-taskmaster.azurewebsites.net/TaskMaster.js"></script>
 </body>
 </html>
